katars/tests/snaps/snapshots/snap_errors__no_match_arm.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"match 42 { 0 -> \\\"zero\\\" }\")"
---
Error: no match arm matched
   ╭─[<test>:1:1]
   │
 1 │ match 42 { 0 -> "zero" }
   │ ────────────┬───────────  
   │             ╰───────────── no match arm matched
───╯
